<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">19-Sqlite</string>
    <string name="hello_world">Sqlite Database!</string>
    <string name="action_settings">Settings</string>
    
    <string name="text_name">Name:</string>
    <string name="text_email">E-mail:</string>
    <string name="text_datetime">DateTime:</string>

    <string name="bt_add">Add Record</string>
    
    <string name="msg_record_ok">Record saved correctly!</string>
    <string name="msg_record_fail">It was a problem while record is saved!</string>
    
    <string name="text_search">Search by name:</string>    
    <string name="text_search_date">Search by datetime:</string>
    <string name="bt_search">Search</string>
    
    <string name="tab">\u0009\u0009</string>
    
    <string name="license">Copyright &#169; Roberto Calvo Palomino\nEstos ejemplos y su código fuente está licenciados bajo GPLv3 (http://www.gnu.org/licenses/). Open Source Software!</string>    
    
</resources>
